Comentarios y cambios minimos